@@ -1,3 +1,8 @@
+<b>Version 2.3.2:</b><br/><br/>
+    &#8226; TeslaUnread for homescreen unread badges<br/>
+    &#8226; Random bug fixes<br/>
+<br/><br/>
+
 <b>Version 2.3.1:</b><br/><br/>
     &#8226; Page for searching your own timeline<br/>
     &#8226; Changes for DashClock<br/>
